--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
 <body>
   <app-root></app-root>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
 
 </html>
