--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css' rel='stylesheet' />
+
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Casa Dominga</title>
 
   <base href="/" />
 
@@ -20,7 +22,6 @@
 
 <body>
   <app-root></app-root>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
