--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </html>
