imagenes de lugares desde base

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,23 @@
   <app-root></app-root>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+<!-- <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-storage.js"></script>
+<script type="text/javascript">
+  var firebaseConfig = {
+    apiKey: "AIzaSyDhM4nqR6sQ9bDVZjc2zSSnRGoPKCJRFcM",
+    authDomain: "appdominga.firebaseapp.com",
+    databaseURL: "https://appdominga.firebaseio.com",
+    projectId: "appdominga",
+    storageBucket: "appdominga.appspot.com",
+    messagingSenderId: "99878739465",
+    appId: "1:99878739465:web:b831cd823949fc045be2d8",
+    measurementId: "G-BPNTCZ1PC9"
+  };
+  firebase.initializeApp(firebaseConfig);
+  var storage = firebase.storage();
+    var pathReference = storage.ref('1/malabrigo-02.jpg').getDownloadURL().then((pathReference)=> {
+        console.log(pathReference);
+    });
+</script> -->
 </html>
