--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Mapbox -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
+    <!-- Fuentes dislexia -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/opendyslexic" type="text/css"/>
 </head>
 
 <body>
